--- a/invited/index.html
+++ b/invited/index.html
@@ -5,10 +5,20 @@ title: Invited Talks
 
 <h2>‪Kenichi Morita: How can we construct reversible Turing machines in a very simple reversible cellular automaton?</h2>
 <p>
-  Kenichi Morita is a professor emeritus of Hiroshima University, Japan.  He received his PhD degree from Osaka University in 1978.  From 1974 to 1987, he was a research associate of the Faculty of Engineering Science, Osaka University.  From 1987 to 1990, he was an associate professor, and from 1990 to 1993 a full professor of the Faculty of Engineering, Yamagata University.  From 1993 to 2013, he was a full professor of the Graduate School of Engineering, Hiroshima University. 
+  Kenichi Morita is a professor emeritus of Hiroshima University, Japan.  
+  He received his PhD degree from Osaka University in 1978.  
+  From 1974 to 1987, he was a research associate of the Faculty of Engineering Science, Osaka University.  
+  From 1987 to 1990, he was an associate professor, and from 1990 to 1993 a full professor of the Faculty of Engineering, Yamagata University.  
+  From 1993 to 2013, he was a full professor of the Graduate School of Engineering, Hiroshima University. 
 </p>
 <p>
-  Prof. Morita has been engaged in the research of automata theory, cellular automata, formal language theory, and reversible computing.  He started the study of reversible computing in the mid-1980s.  Since then, he studied many kinds of reversible computing models such as reversible Turing machines, reversible counter machines, reversible cellular automata, reversible logic elements, and others.  In particular, he investigated the problem of how simple computationally universal reversible systems can be from the standpoint of automata theory.  He proposed the framework of partitioned cellular automata for designing reversible cellular automata.  Using this framework, he proved that a one-dimensional reversible cellular automaton is computationally universal.  He also proposed reversible logic elements with memory as alternatives to reversible logic gates, and clarified their universality and usefulness. 
+  Prof. Morita has been engaged in the research of automata theory, cellular automata, formal language theory, and reversible computing.  
+  He started the study of reversible computing in the mid-1980s.  Since then, he studied many kinds of reversible computing models such as 
+  reversible Turing machines, reversible counter machines, reversible cellular automata, reversible logic elements, and others.  
+  In particular, he investigated the problem of how simple computationally universal reversible systems can be from the standpoint of automata theory.  
+  He proposed the framework of partitioned cellular automata for designing reversible cellular automata.  
+  Using this framework, he proved that a one-dimensional reversible cellular automaton is computationally universal.  
+  He also proposed reversible logic elements with memory as alternatives to reversible logic gates, and clarified their universality and usefulness. 
 </p>
 <p>
   <a href="https://scholar.google.com/citations?user=kujUxFYAAAAJ" target="_blank">Website</a>
@@ -41,9 +51,24 @@ IEEE, IPSJ and IEICE, and is a member of JSAI, and JSCS.
 <a href="https://www.algo.cce.i.kyoto-u.ac.jp/minato/index-e.html" target="_blank">Website</a>
 </p>
 
-<h2>Atsushi Matsuo: TBA</h2>
+<h2>Atsushi Matsuo: Variational Quantum Eigensolver and Applications to Specific Optimization Problems</h2>
 <p>
-  (IBM Research - Tokyo)
+Atsushi Matsuo is a researcher at IBM Research - Tokyo. He received his B.E. and M.E. degrees in
+Information Science and Engineering from Ritsumeikan University, Japan
+in 2011 and 2013, respectively. He is currently a PhD student of
+Graduate School of Information Science and Engineering, Ritsumeikan
+University while working at IBM Research - Tokyo. His research
+interests include quantum circuit synthesis, compilers for quantum
+circuits and quantum algorithms for current noisy devices such as
+variational quantum algorithms. Also, he works on developing quantum
+community and develop quantum human resource for future. For example,
+he participated Qiskit camps and hackathon as a coach. He contributed
+to IBM Quantum Challenge that is a competitive programming contest for
+quantum computers as one of core members. 
+</p>
+
+<p>
+<a href="https://researcher.watson.ibm.com/researcher/view.php?person=jp-MATSUOA" target="_blank">Website</a>
 </p>
 
 <!--
