--- a/program/index.html
+++ b/program/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Programme
+title: Programme (Tentative)
 ---
 
 <p>
@@ -27,163 +27,190 @@ title: Programme
     window.setInterval(update_local_time,500);
   })();
 </script>
-
-<p>
-  The accepted papers are available during the conference following this link: <a href="https://link.springer.com/book/10.1007/978-3-030-52482-1">https://link.springer.com/book/10.1007/978-3-030-52482-1</a>
-</p>
-
-<p>
-  Join the conference at this link: <a href="https://uio.zoom.us/j/61514271701">https://uio.zoom.us/j/61514271701</a>
-</p>
-
-<h2>Day 1 &ndash; July 9, 2020</h2>
-<!-- <p>Ole Johan Dahls Hus, lecture hall Smalltalk</p> -->
-
-
+<h2>Day 1 &ndash; July-7 2021</h2>
 <table id="program">
-  <tr class="special"><td>08:50&ndash;09:00</td><td><div class="paper">Opening</div></td></tr>
-  <tr class="caption"> <td colspan="2"> Keynote 1 <span class="chair">(Session chair: Ivan Lanese)</span> </td> </tr>
-  <tr class="keynote"><td>9:00&ndash;10:00</td>
-    <td>
-      <div class="paper">Problems and prospects for bidirectional transformations</div>
-      <div class="authors"><b>Perdita Stevens</b></div>
-      <div><a href="../slides/day-1-keynote-perdita-stevens.pdf">slides</a>, <a href="https://youtu.be/q0JbsTHgYY4">video</a></div>
-    </td>
-  </tr>
-  <tr class="special"> <td>10:00&ndash;10:30</td> <td> <div class="paper">Break</div> </td> </tr>
-  <tr class="caption"> <td colspan="2"> Session 1 <span class="chair">(Session chair: Luca Paolini)</span> </td> </tr>
-  <tr> <td>10:30&ndash;11:00</td>
-    <td>
-      <div class="paper">Reversible Occurrence Nets and Causal Reversible Event Structures</div>
-      <div class="authors">Hernan Melgratti, Claudio Antares Mezzina, Iain Phillips, <b>G. Michele Pinna</b> and Irek Ulidowski</div>
-      <div><a href="../slides/day-1-session-1-michele-pinna.pdf">slides</a>, <a href="https://youtu.be/29gnqe3LrYs">video</a></div>
-    </td>
-  </tr>
-  <tr> <td>11:00&ndash;11:30</td>
-    <td>
-      <div class="paper">Event structures for the reversible early internal pi-calculus</div>
-      <div class="authors"><b>Eva Graversen</b>, Iain Phillips and Nobuko Yoshida</div>
-      <div><a href="../slides/day-1-session-1-eva-graversen.pdf">slides</a></div>
-    </td>
-  </tr>
-  <tr> <td>11:30&ndash;12:00</td>
-    <td>
-      <div class="paper">Involutory Turing Machines</div>
-      <div class="authors"><b>Keisuke Nakano</b></div>
-      <div><a href="../slides/day-1-session-1-keisuke-nakano.pdf">slides</a></div>
-    </td>
-  </tr>
-  <tr class="special"> <td>12:00&ndash;14:00</td>
-    <td>
-      <div class="paper">Lunch break</div>
-    </td>
-  </tr>
-  <tr class="caption"> <td colspan="2"> Session 2 <span class="chair">(Session chair: Rudolf Schlatte)</span> </td> </tr>
-  <tr> <td>14:00&ndash;14:30</td>
-    <td>
-      <div class="paper">Hermes: A Language for Light-Weight Encryption</div>
-      <div class="authors"><b>Torben Ægidius Mogensen</b></div>
-      <div><a href="../slides/day-1-session-2-torben-mogensen.pdf">slides</a></div>
-    </td>
-  </tr>
-  <tr> <td>14:30&ndash;15:00</td> <td>
-      <div class="paper">Reversible programming languages capturing complexity classes</div>
-      <div class="authors"><b>Lars Kristiansen</b></div>
-      <div><a href="../slides/day-1-session-2-lars-kristiansen.pdf">slides</a></div>
-    </td>
-  </tr>
-  <tr> <td>15:00&ndash;15:30</td> <td>
-      <div class="paper">On the expressivity of total reversible programming languages </div>
-      <div class="authors">Armando Matos, <b>Luca Paolini</b> and Luca Roversi</div>
-      <div><a href="../slides/day-1-session-2-luca-paolini.pdf">slides</a></div>
-    </td>
-  </tr>
-  <tr class="special"> <td>15:30&ndash;16:00</td> <td> <div class="paper">Break</div> </td> </tr>
-  <tr class="caption"> <td colspan="2"> Session 3 <span class="chair">(Session chair: Irek Ulidowski)</span> </td> </tr>
-  <tr> <td>16:00&ndash;16:20</td> <td>
-      <div class="paper">WiP: Toward a Curry-Howard Correspondence for Linear, Reversible Computation</div>
-      <div class="authors"><b>Kostia Chardonnet</b>, Alexis Saurin and Benoît Valiron</div>
-      <div><a href="../slides/day-1-session-3-kostia-chardonnet.pdf">slides</a></div>
-    </td>
-  </tr>
-  <tr> <td>16:20&ndash;16:40</td> <td>
-      <div class="paper">WiP:  Towards a formal account for software transactional memory</div>
-      <div class="authors"><b>Doriana Medić</b>, Claudio Antares Mezzina, Nobuko Yoshida and Iain Phillips</div>
-      <div><a href="../slides/day-1-session-3-doriana-medic.pdf">slides</a></div>
-    </td>
-  </tr>
-  <tr> <td>16:40&ndash;17:00</td> <td>
-      <div class="paper">WiP: Encoding Reversing Petri Nets in Answer Set Programming</div>
-      <div class="authors">Yannis Dimopoulos, Eleftheria Kouppari, Anna Philippou and <b>Kyriaki Psara</b>
-      </div>
-      <div>slides <a href="../slides/day-1-session-3-kyriaki-psara.pdf">pdf</a>, <a href="../slides/day-1-session-3-kyriaki-psara.pptx">pptx</a> </div>
-    </td>
-  </tr>
-  <tr> <td>17:00&ndash;17:25</td> <td>
-      <div class="paper">Tool: ReverCSP: Time-travelling in CSP computations</div>
-      <div class="authors"><b>Carlos Galindo</b>, Naoki Nishida, Josep Silva and Salvador Tamarit</div>
-      <div><a href="../slides/day-1-session-3-carlos-galindo.pdf">slides</a></div>
-    </td>
-  </tr>
-  <!-- <tr class="special"> <td>19:00</td> <td> <div class="paper">Socially distanced dinner</div> </td> </tr> -->
+<tr class="special"><td>17:50&ndash;18:00</td><td><div class="paper">Opening</div></td></tr>
+<tr class="caption"><td colspan="2">Invited Talk 1<span class="chair">(Session Chair: TBA)</span></td></tr>
+<tr class="keynote"><td>18:00&ndash;19:00</td>
+<td>
+
+			<div class="paper">How can we construct reversible Turing machines in a very simple reversible cellular automaton?</div>
+
+			<div class="authors"><b>‪Kenichi Morita</b></div>
+
+			<div>[slides],[video]</div>
+</td></tr>
+<tr class="special"><td>19:00&ndash;19:30</td>
+<td><div class="paper">Break</div></td></tr>
+<tr class="caption"><td colspan="2">Programming Languages<span class="chair">(Session Chair: TBA)</span></td></tr>
+<tr><td>19:30&ndash;20:00</td>
+<td>
+
+			<div class="paper">Reversible Functional Array Programming</div>
+
+			<div class="authors">Torben Ægidius Mogensen</div>
+
+			<div>[slides],[video]</div>
+</td></tr>
+<tr><td>20:00&ndash;20:30</td>
+<td>
+
+			<div class="paper">Compiling Janus to RSSA</div>
+
+			<div class="authors">Martin Kutrib, Uwe Meyer, Niklas Deworetzki and Marc Schuster</div>
+
+			<div>[slides],[video]</div>
+</td></tr>
+<tr><td>20:30&ndash;20:55</td>
+<td>
+
+			<div class="paper">Towards a Unified Language Architecture for Reversible Object-Oriented Programming</div>
+
+			<div class="authors">Lasse Hay-Schmidt, Robert Glück, Martin Holm Cservenka and Tue Haulund</div>
+
+			<div>[slides],[video]</div>
+</td></tr>
+<tr><td>20:55&ndash;21:25</td>
+<td>
+
+			<div class="paper">Causal-Consistent Debugging of Distributed Erlang Programs</div>
+
+			<div class="authors">Giovanni Fabbretti, Ivan Lanese and Jean-Bernard Stefani</div>
+
+			<div>[slides],[video]</div>
+</td></tr>
+<tr class="special"><td>21:25&ndash;21:55</td>
+<td><div class="paper">Break</div></td></tr>
+<tr class="caption"><td colspan="2">Reversible Concurrent Computation<span class="chair">(Session Chair: TBA)</span></td></tr>
+<tr><td>21:55&ndash;22:25</td>
+<td>
+
+			<div class="paper">Towards a truly concurrent semantics for reversible CCS</div>
+
+			<div class="authors">Hernán Melgratti, Claudio Antares Mezzina and G. Michele Pinna</div>
+
+			<div>[slides],[video]</div>
+</td></tr>
+<tr><td>22:25&ndash;22:55</td>
+<td>
+
+			<div class="paper">Forward-Reverse Observational Equivalences in CCSK</div>
+
+			<div class="authors">Ivan Lanese and Iain Phillips</div>
+
+			<div>[slides],[video]</div>
+</td></tr>
+<tr><td>22:55&ndash;23:25</td>
+<td>
+
+			<div class="paper">Enabling Replications and Contexts in Reversible Concurrent Calculus</div>
+
+			<div class="authors">Clément Aubert and Doriana Medić</div>
+
+			<div>[slides],[video]</div>
+</td></tr>
+<tr><td>23:25&ndash;23:55</td>
+<td>
+
+			<div class="paper">Reversibility and predictions</div>
+
+			<div class="authors">Martin Vassor</div>
+
+			<div>[slides],[video]</div>
+</td></tr>
 </table>
-
-<h2>Day 2 &ndash; July 10, 2020</h2>
-<!-- <p>Ole Johan Dahls Hus, lecture hall Smalltalk</p> -->
-
+<h2>Day 2 &ndash; July-8 2021</h2>
 <table id="program">
-  <tr class="special"><td>08:50&ndash;09:00</td><td><div class="paper">Opening</div></td></tr>
-  <tr class="caption"> <td colspan="2"> Keynote 2 <span class="chair">(Session chair: Mariusz Rawski)</span> </td> </tr>
-  <tr class="keynote"> <td>09:00&ndash;10:00</td> <td>
-      <div class="paper">Keynote: Inverse Problems, Constraint Satisfaction, Reversible Logic, Invertible Logic and Grover Quantum Oracles for Practical Problems</div>
-      <div class="authors"><b>Marek Perkowski</b></div>
-      <div>slides <a href="../slides/day-2-keynote-marek-perkowski.pdf">pdf</a>, <a href="../slides/day-2-keynote-marek-perkowski.pptx">pptx</a> </div>
-    </td>
-  </tr>
-  <tr class="special"> <td>10:00&ndash;10:30</td> <td> <div class="paper">Break</div> </td> </tr>
-  <tr class="caption"> <td colspan="2"> Session 4 <span class="chair">(Session chair: Marek Perkowski)</span> </td> </tr>
-  <tr> <td>10:30&ndash;11:00</td> <td>
-      <div class="paper">Fractional Types: Expressive and Safe Space Management for Ancilla Bits</div>
-      <div class="authors"><b>Chao-Hong Chen</b>, Vikraman Choudhury, Jacques Carette and Amr Sabry</div>
-    </td>
-  </tr>
-  <tr> <td>11:00&ndash;11:30</td> <td>
-      <div class="paper">Quantum CNOT circuits synthesis for NISQ architectures using the syndrome decoding problem</div>
-      <div class="authors"><b>Timothée Goubault de Brugière</b>, Marc Baboulin, Benoît Valiron, Simon Martiel and Cyril Allouche</div>
-    </td>
-  </tr>
-  <tr> <td>11:30&ndash;12:00</td> <td>
-      <div class="paper">Maximality of reversible gate sets</div>
-      <div class="authors"><b>Tim Boykett</b></div>
-      <div><a href="../slides/day-2-session-4-tim-boykett.pdf">slides</a></div>
-    </td>
-  </tr>
-  <tr class="special"> <td>12:00&ndash;14:00</td> <td> <div class="paper">Lunch break</div> </td> </tr>
-  <tr class="caption"> <td colspan="2"> Session 5 <span class="chair">(Session chair: Claudio Moraga)</span> </td> </tr>
-  <tr> <td>14:00&ndash;15:00</td> <td>
-      <div class="paper">A tutorial introduction to quantum circuit programming in dependently typed Proto-Quipper</div>
-      <div class="authors"><b>Peng Fu</b>, Kohei Kishida, Neil J. Ross and Peter Selinger</div>
-    </td>
-  </tr>
-  <tr> <td>15:00&ndash;15:30</td> <td>
-      <div class="paper">Search-based Transformation Synthesis for 3-valued Reversible Circuits</div>
-      <div class="authors">Gerhard Dueck and <b>Michael Miller</b></div>
-      <div><a href="../slides/day-2-session-5-michael-miller.pdf">slides</a></div>
-    </td>
-  </tr>
-  <tr class="special"> <td>15:30&ndash;16:00</td> <td> <div class="paper">Break</div> </td> </tr>
-  <tr class="caption"> <td colspan="2"> Session 6 <span class="chair">(Session chair: Robert Glueck)</span> </td> </tr>
-  <tr> <td>16:00&ndash;16:25</td> <td>
-      <div class="paper">Tool: Reversible Computations in Logic Programming</div>
-      <div class="authors"><b>German Vidal</b></div>
-      <div><a href="../slides/day-2-session-6-german-vidal.pdf">slides</a>, <a href="https://media.upv.es/player/?id=dff62810-c28d-11ea-a5d0-0fb4dbce2dd9">video</a></div>
-    </td>
-  </tr>
-  <tr> <td>16:25&ndash;16:50</td> <td>
-      <div class="paper">Tool:  A Reversible Runtime Environment for Parallel Programs</div>
-      <div class="authors">Takashi Ikeda and <b>Shoji Yuen</b></div>
-      <div><a href="../slides/day-2-session-6-shoji-yuen.pdf">slides</a></div>
-    </td>
-  </tr>
-  <tr class="special"> <td>16:50&ndash;17:00</td> <td> <div>Closing Session</div> </td> </tr>
+<tr class="caption"><td colspan="2">Invited Talk 2<span class="chair">(Session Chair: TBA)</span></td></tr>
+<tr class="keynote"><td>18:00&ndash;19:00</td>
+<td>
+
+			<div class="paper"> Decision Diagrams and Reversible Computation</div>
+
+			<div class="authors"><b>Shin-ichi Minato</b></div>
+
+			<div>[slides],[video]</div>
+</td></tr>
+<tr class="special"><td>19:00&ndash;19:30</td>
+<td><div class="paper">Break</div></td></tr>
+<tr class="caption"><td colspan="2">"Theory and Foundations, Bidirectional transformation"<span class="chair">(Session Chair: TBA)</span></td></tr>
+<tr><td>19:30&ndash;20:00</td>
+<td>
+
+			<div class="paper">A Tangled Web of 12 Lens Laws</div>
+
+			<div class="authors">Keisuke Nakano</div>
+
+			<div>[slides],[video]</div>
+</td></tr>
+<tr><td>20:00&ndash;20:20</td>
+<td>
+
+			<div class="paper">Splitting recursion schemes into reversible and classical interacting threads</div>
+
+			<div class="authors">Luca Roversi, Luca Paolini and Armando Matos</div>
+
+			<div>[slides],[video]</div>
+</td></tr>
+<tr><td>20:20&ndash;20:40</td>
+<td>
+
+			<div class="paper">Reversibility of Executable Interval Temporal Logic Specifications</div>
+
+			<div class="authors">Antonio Cau, Stefan Kuhn and James Hoey</div>
+
+			<div>[slides],[video]</div>
+</td></tr>
+<tr class="special"><td>20:40&ndash;21:10</td>
+<td><div class="paper">Break</div></td></tr>
+<tr class="caption"><td colspan="2">Invited Talk 3<span class="chair">(Session Chair: TBA)</span></td></tr>
+<tr class="keynote"><td>21:10&ndash;22:10</td>
+<td>
+
+			<div class="paper">Variational Quantum Eigensolver and Its Applications</div>
+
+			<div class="authors"><b>Atsushi Matsuo</b></div>
+
+			<div>[slides],[video]</div>
+</td></tr>
+<tr class="special"><td>22:10&ndash;22:40</td>
+<td><div class="paper">Break</div></td></tr>
+<tr class="caption"><td colspan="2">Hardware<span class="chair">(Session Chair: TBA)</span></td></tr>
+<tr><td>22:40&ndash;23:10</td>
+<td>
+
+			<div class="paper">Efficient Construction of Functional Representations for Quantum Algorithms</div>
+
+			<div class="authors">Lukas Burgholzer, Rudy Raymond, Indranil Sengupta and Robert Wille</div>
+
+			<div>[slides],[video]</div>
+</td></tr>
+<tr><td>23:10&ndash;23:40</td>
+<td>
+
+			<div class="paper">Finding Optimal Implementations of Non-native CNOT Gates using SAT</div>
+
+			<div class="authors">Philipp Niemann, Luca Müller and Rolf Drechsler</div>
+
+			<div>[slides],[video]</div>
+</td></tr>
+<tr><td>23:40&ndash;24:10</td>
+<td>
+
+			<div class="paper">Evan E. Dobbs, Robert Basmadjian, Alexandru Paler and Joseph S. Friedman</div>
+
+			<div class="authors">Evan E. Dobbs, Robert Basmadjian, Alexandru Paler and Joseph S. Friedman</div>
+
+			<div>[slides],[video]</div>
+</td></tr>
+<tr><td>24:10&ndash;24:30</td>
+<td>
+
+			<div class="paper">OR-Toffoli and OR-Peres Reversible Gates</div>
+
+			<div class="authors">Claudio Moraga</div>
+
+			<div>[slides],[video]</div>
+</td></tr>
+<tr class="special"><td>24:30&ndash;24:45</td><td><div class="paper">Closing</div></td></tr>
 </table>
