--- a/registration/index.html
+++ b/registration/index.html
@@ -3,18 +3,41 @@ layout: default
 title: Registration
 ---
 
-<p>
+<!--<p>
 Participating RC2021 is <b>free of charge</b>, but a participant needs to register.</p>
 <p>
 Details of registration will be announced later.
+</p>-->
+
+
+
+<p>
+  Due to the current health situation and travel regulations in the world, RC2021
+  will be held online.  Participation is free of charge.  Registered
+  participants and speakers will receive Zoom information to the email
+  address used for registering.  Please click the button below.
 </p>
 
-<!--<p>
-  Due to the current health situation and travel regulations in Europe, RC2020
-  will be held online.  Participation is free of charge.  Registered
-  participants and speakers will receive event login information to the email
-  address used for registering.
-</p>-->
+<p>
+  <button type="button" onclick="location.href='https://forms.office.com/r/CxL439NeH8'">Registration</button>
+</p>
+
+<p>(In case you cannot click the button, please jump to<br/> 'https://forms.office.com/r/CxL439NeH8')</p>
+
+<p>
+By clicking the button, you will be directed to an MS-office form.   After completing registration, you will receive a message
+from 'yuen.shoji' at c0.nagoya-u.jp to the email address used for registartion.  
+Please reply back to confirm the email address is correct.
+
+For authors, Springer may send the (physical) LNCS proceedings.  If you like to have one, please enter your
+postal address at registration.
+
+<p>Registration will be open until the end of the conference.  (Authors who like to have the LNCS proceedings,
+  please let us know before the conference starts.  We will let Springer know the postal addresses right after
+  the conference.)
+</p>
+
+<p>If you have any problem for registration, please contact <a mailto:="info@reversible-computation.org">info@reversible-computation.org</a></p>
 
 <!--
 <script type="text/javascript" src="https://nettskjema.no/static/js/external-embedding.js"></script><iframe class="nettskjema-iframe" src="https://nettskjema.no/a/rc2020?embed=1" title="RC2020 registration" frameborder="0" width="100%">If you can read this, your browser does not support iframes.</iframe>
