--- a/program/index.html
+++ b/program/index.html
@@ -30,19 +30,19 @@ title: Programme (Tentative)
 <h2>Day 1 &ndash; July-7 2021</h2>
 <table id="program">
 <tr class="special"><td>17:50&ndash;18:00</td><td><div class="paper">Opening</div></td></tr>
-<tr class="caption"><td colspan="2">Invited Talk 1<span class="chair">(Session Chair: TBA)</span></td></tr>
+<tr class="caption"><td colspan="2">Invited Talk 1<span class="chair">(Session Chair: Tetsuo Yokoyama)</span></td></tr>
 <tr class="keynote"><td>18:00&ndash;19:00</td>
 <td>
 
 			<div class="paper">How can we construct reversible Turing machines in a very simple reversible cellular automaton?</div>
 
-			<div class="authors">‪<b>Kenichi Morita</b></div>
+			<div class="authors"><b>Kenichi Morita</b></div>
 
 			<div>[slides],[video]</div>
 </td></tr>
 <tr class="special"><td>19:00&ndash;19:30</td>
 <td><div class="paper">Break</div></td></tr>
-<tr class="caption"><td colspan="2">Programming and Programming Languages<span class="chair">(Session Chair: TBA)</span></td></tr>
+<tr class="caption"><td colspan="2">Programming and Programming Languages<span class="chair">(Session Chair: Keisuke Nakano)</span></td></tr>
 <tr><td>19:30&ndash;20:00</td>
 <td>
 
@@ -121,7 +121,7 @@ title: Programme (Tentative)
 </table>
 <h2>Day 2 &ndash; July-8 2021</h2>
 <table id="program">
-<tr class="caption"><td colspan="2">Invited Talk 2<span class="chair">(Session Chair: TBA)</span></td></tr>
+<tr class="caption"><td colspan="2">Invited Talk 2<span class="chair">(Session Chair: Robert Wille)</span></td></tr>
 <tr class="keynote"><td>18:00&ndash;19:00</td>
 <td>
 
@@ -133,7 +133,7 @@ title: Programme (Tentative)
 </td></tr>
 <tr class="special"><td>19:00&ndash;19:30</td>
 <td><div class="paper">Break</div></td></tr>
-<tr class="caption"><td colspan="2">Theory and Foundations<span class="chair">(Session Chair: TBA)</span></td></tr>
+<tr class="caption"><td colspan="2">Theory and Foundations<span class="chair">(Session Chair: Ivan Lanese)</span></td></tr>
 <tr><td>19:30&ndash;20:00</td>
 <td>
 
@@ -163,7 +163,7 @@ title: Programme (Tentative)
 </td></tr>
 <tr class="special"><td>20:40&ndash;21:10</td>
 <td><div class="paper">Break</div></td></tr>
-<tr class="caption"><td colspan="2">Invited Talk 3<span class="chair">(Session Chair: TBA)</span></td></tr>
+<tr class="caption"><td colspan="2">Invited Talk 3<span class="chair">(Session Chair: Shigeru Yamashita)</span></td></tr>
 <tr class="keynote"><td>21:10&ndash;22:10</td>
 <td>
 
