--- a/program/index.html
+++ b/program/index.html
@@ -87,7 +87,7 @@ title: Programme (Tentative)
 
 			<div class="paper">Towards a truly concurrent semantics for reversible CCS</div>
 
-			<div class="authors">Hernán Melgratti, Claudio Antares Mezzina and G. Michele Pinna</div>
+			<div class="authors">Hernán Melgratti, <b>Claudio Antares Mezzina</b> and G. Michele Pinna</div>
 
 			<div>[slides],[video]</div>
 </td></tr>
