--- a/program/index.html
+++ b/program/index.html
@@ -66,7 +66,7 @@ title: Programme (Tentative)
 
 			<div class="paper">Towards a Unified Language Architecture for Reversible Object-Oriented Programming</div>
 
-			<div class="authors">Lasse Hay-Schmidt, Robert Glück, Martin Holm Cservenka and Tue Haulund</div>
+			<div class="authors">Lasse Hay-Schmidt, Robert Glück, <b>Martin Holm Cservenka</b> and Tue Haulund</div>
 
 			<div>[slides],[video]</div>
 </td></tr>
@@ -105,7 +105,7 @@ title: Programme (Tentative)
 
 			<div class="paper">Explicit Identifiers and Contexts in Reversible Concurrent Calculus</div>
 
-			<div class="authors">Clément Aubert and Doriana Medić</div>
+			<div class="authors">Clément Aubert and <b>Doriana Medić</b></div>
 
 			<div>[slides],[video]</div>
 </td></tr>
@@ -181,7 +181,7 @@ title: Programme (Tentative)
 
 			<div class="paper">Efficient Construction of Functional Representations for Quantum Algorithms</div>
 
-			<div class="authors">Lukas Burgholzer, Rudy Raymond, Indranil Sengupta and Robert Wille</div>
+			<div class="authors"><b>Lukas Burgholzer</b>, Rudy Raymond, Indranil Sengupta and Robert Wille</div>
 
 			<div>[slides],[video]</div>
 </td></tr>
