--- a/program/index.html
+++ b/program/index.html
@@ -66,7 +66,7 @@ title: Programme (Tentative)
 
 			<div class="paper">Towards a Unified Language Architecture for Reversible Object-Oriented Programming</div>
 
-			<div class="authors">Lasse Hay-Schmidt, Robert Glück, <b>Martin Holm Cservenka</b> and Tue Haulund</div>
+			<div class="authors"><b>Lasse Hay-Schmidt</b>, Robert Glück, <b>Martin Holm Cservenka</b> and Tue Haulund</div>
 
 			<div>[slides],[video]</div>
 </td></tr>
@@ -75,7 +75,7 @@ title: Programme (Tentative)
 
 			<div class="paper">Causal-Consistent Debugging of Distributed Erlang Programs</div>
 
-			<div class="authors">Giovanni Fabbretti, Ivan Lanese and Jean-Bernard Stefani</div>
+			<div class="authors"><b>Giovanni Fabbretti</b>, Ivan Lanese and Jean-Bernard Stefani</div>
 
 			<div>[slides],[video]</div>
 </td></tr>
@@ -199,7 +199,7 @@ title: Programme (Tentative)
 
 			<div class="paper">Fast Swapping in a Quantum Multiplier Modelled as a Queuing Network</div>
 
-			<div class="authors">Evan E. Dobbs, Robert Basmadjian, Alexandru Paler and Joseph S. Friedman</div>
+			<div class="authors"><b>Evan E. Dobbs</b>, Robert Basmadjian, Alexandru Paler and Joseph S. Friedman</div>
 
 			<div>[slides],[video]</div>
 </td></tr>
