--- a/program/index.html
+++ b/program/index.html
@@ -81,7 +81,7 @@ title: Programme (Tentative)
 </td></tr>
 <tr class="special"><td>21:25&ndash;21:55</td>
 <td><div class="paper">Break</div></td></tr>
-<tr class="caption"><td colspan="2">Reversible Concurrent Computation<span class="chair">(Session Chair: TBA)</span></td></tr>
+<tr class="caption"><td colspan="2">Reversible Concurrent Computation<span class="chair">(Session Chair: Claudio Antares mezzina/Shoji Yuen)</span></td></tr>
 <tr><td>21:55&ndash;22:25</td>
 <td>
 
