--- a/program/index.html
+++ b/program/index.html
@@ -175,7 +175,7 @@ title: Programme (Tentative)
 </td></tr>
 <tr class="special"><td>22:10&ndash;22:40</td>
 <td><div class="paper">Break</div></td></tr>
-<tr class="caption"><td colspan="2">Circuit Synthesis<span class="chair">(Session Chair: TBA)</span></td></tr>
+<tr class="caption"><td colspan="2">Circuit Synthesis<span class="chair">(Session Chair: Shigeru Yamashita)</span></td></tr>
 <tr><td>22:40&ndash;23:10</td>
 <td>
 
