--- a/program/index.html
+++ b/program/index.html
@@ -50,7 +50,7 @@ title: Programme (Tentative)
 
 			<div class="authors"><b>Torben Ægidius Mogensen</b></div>
 
-			<div>[slides],[video]</div>
+			<div>[<a herf="https://nuss.nagoya-u.ac.jp/s/75KtsLYAqAAQGoi" target="_blank">slides</a>],[video]</div>
 </td></tr>
 <tr><td>20:00&ndash;20:30</td>
 <td>
@@ -98,7 +98,7 @@ title: Programme (Tentative)
 
 			<div class="authors"><b>Ivan Lanese</b> and Iain Phillips</div>
 
-			<div>[slides],[video]</div>
+			<div>[<a href="https://nuss.nagoya-u.ac.jp/s/RRftLEwedt3Wwnm" target="_blank">slides</a>],[video]</div>
 </td></tr>
 <tr><td>22:55&ndash;23:25</td>
 <td>
@@ -107,7 +107,7 @@ title: Programme (Tentative)
 
 			<div class="authors">Clément Aubert and <b>Doriana Medić</b></div>
 
-			<div>[slides],[video]</div>
+			<div>[<a href="https://nuss.nagoya-u.ac.jp/s/F6EH2K69pR3NRnH" target="_blank">slides</a>>],[video]</div>
 </td></tr>
 <tr><td>23:25&ndash;23:55</td>
 <td>
@@ -150,7 +150,7 @@ title: Programme (Tentative)
 
 			<div class="authors"><b>Luca Roversi</b>, Luca Paolini and Armando Matos</div>
 
-			<div>[slides],[video]</div>
+			<div>[<a href="https://nuss.nagoya-u.ac.jp/s/iYQznBrnxmZAG5n" target="_blank">slides</a>],[video]</div>
 </td></tr>
 <tr><td>20:20&ndash;20:40</td>
 <td>
@@ -159,7 +159,7 @@ title: Programme (Tentative)
 
 			<div class="authors">Antonio Cau, Stefan Kuhn and James Hoey</div>
 
-			<div>[slides],[video]</div>
+			<div>[<a href="https://nuss.nagoya-u.ac.jp/s/93jteZ5yoJeGC7A" target="_blank">slides</a>],[video]</div>
 </td></tr>
 <tr class="special"><td>20:40&ndash;21:10</td>
 <td><div class="paper">Break</div></td></tr>
@@ -210,7 +210,7 @@ title: Programme (Tentative)
 
 			<div class="authors"><b>Claudio Moraga</b></div>
 
-			<div>[slides],[video]</div>
+			<div>[<a href="https://nuss.nagoya-u.ac.jp/s/HJFkMRmxTFoNfQt" target="_blank">slides</a>],[video]</div>
 </td></tr>
 <tr class="special"><td>24:30&ndash;24:45</td><td><div class="paper">Closing</div></td></tr>
 </table>
