--- a/program/index.html
+++ b/program/index.html
@@ -50,7 +50,7 @@ title: Programme (Tentative)
 
 			<div class="authors"><b>Torben Ægidius Mogensen</b></div>
 
-			<div>[<a herf="https://nuss.nagoya-u.ac.jp/s/75KtsLYAqAAQGoi" target="_blank">slides</a>],[video]</div>
+			<div>[<a href="https://nuss.nagoya-u.ac.jp/s/75KtsLYAqAAQGoi" target="_blank">slides</a>],[video]</div>
 </td></tr>
 <tr><td>20:00&ndash;20:30</td>
 <td>
