--- a/program/index.html
+++ b/program/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Programme (Tentative)
+title: Programme
 ---
 
 <p>
@@ -77,7 +77,7 @@ title: Programme (Tentative)
 
 			<div class="authors"><b>Giovanni Fabbretti</b>, Ivan Lanese and Jean-Bernard Stefani</div>
 
-			<div>[slides],[video]</div>
+			<div>[<a href="https://nuss.nagoya-u.ac.jp/s/LJp99n3TPLKNZa2" target="_blank">slides</a>],[video]</div>
 </td></tr>
 <tr class="special"><td>21:25&ndash;21:55</td>
 <td><div class="paper">Break</div></td></tr>
