--- a/program/index.html
+++ b/program/index.html
@@ -107,7 +107,7 @@ title: Programme
 
 			<div class="authors">Clément Aubert and <b>Doriana Medić</b></div>
 
-			<div>[<a href="https://nuss.nagoya-u.ac.jp/s/F6EH2K69pR3NRnH" target="_blank">slides</a>>],[video]</div>
+			<div>[<a href="https://nuss.nagoya-u.ac.jp/s/F6EH2K69pR3NRnH" target="_blank">slides</a>],[video]</div>
 </td></tr>
 <tr><td>23:25&ndash;23:55</td>
 <td>
