--- a/program/index.html
+++ b/program/index.html
@@ -59,7 +59,7 @@ title: Programme
 
 			<div class="authors">Martin Kutrib, <b>Uwe Meyer</b>, Niklas Deworetzki and Marc Schuster</div>
 
-			<div>[slides],[video]</div>
+			<div>[<a href="https://nuss.nagoya-u.ac.jp/s/oGNA2kAESjLJ6Fk" target="_blank">slides</a>],[video]</div>
 </td></tr>
 <tr><td>20:30&ndash;20:55</td>
 <td>
