--- a/program/index.html
+++ b/program/index.html
@@ -157,7 +157,7 @@ title: Programme
 
 			<div class="paper">Reversibility of Executable Interval Temporal Logic Specifications</div>
 
-			<div class="authors">Antonio Cau, Stefan Kuhn and James Hoey</div>
+			<div class="authors"><b>Antonio Cau</b>, Stefan Kuhn and James Hoey</div>
 
 			<div>[<a href="https://nuss.nagoya-u.ac.jp/s/93jteZ5yoJeGC7A" target="_blank">slides</a>],[video]</div>
 </td></tr>
@@ -190,7 +190,7 @@ title: Programme
 
 			<div class="paper">Finding Optimal Implementations of Non-native CNOT Gates using SAT</div>
 
-			<div class="authors">Philipp Niemann, Luca Müller and Rolf Drechsler</div>
+			<div class="authors"><b>Philipp Niemann</b>, Luca Müller and Rolf Drechsler</div>
 
 			<div>[slides],[video]</div>
 </td></tr>
