--- a/program/index.html
+++ b/program/index.html
@@ -38,7 +38,7 @@ title: Programme
 
 			<div class="authors"><b>Kenichi Morita</b></div>
 
-			<div>[<a href="https://nuss.nagoya-u.ac.jp/s/cR3HZKBaEooCFcq" target="_blank">slides</a>],[video]</div>
+			<div>[<a href="https://nuss.nagoya-u.ac.jp/s/cR3HZKBaEooCFcq" target="_blank">slides</a>],[<a href="https://nuss.nagoya-u.ac.jp/s/zzFacKAFYoqQZa5" target="_blank">video</a>]</div>
 </td></tr>
 <tr class="special"><td>19:00&ndash;19:30</td>
 <td><div class="paper">Break</div></td></tr>
