--- a/program/index.html
+++ b/program/index.html
@@ -129,7 +129,7 @@ title: Programme
 
 			<div class="authors"><b>Shin-ichi Minato</b></div>
 
-			<div>[slides],[video]</div>
+			<div>[<a href="https://nuss.nagoya-u.ac.jp/s/ryeLijr9zYXybpj" target="_blank">slides</a>],[video]</div>
 </td></tr>
 <tr class="special"><td>19:00&ndash;19:30</td>
 <td><div class="paper">Break</div></td></tr>
