--- a/program/index.html
+++ b/program/index.html
@@ -89,7 +89,7 @@ title: Programme
 
 			<div class="authors">Hernán Melgratti, <b>Claudio Antares Mezzina</b> and G. Michele Pinna</div>
 
-			<div>[slides],[video]</div>
+			<div>[<a href="https://nuss.nagoya-u.ac.jp/s/tKw5dsybcEDxkHr" target="_blank">slides</a>],[video]</div>
 </td></tr>
 <tr><td>22:25&ndash;22:55</td>
 <td>
@@ -141,7 +141,7 @@ title: Programme
 
 			<div class="authors"><b>Keisuke Nakano</b></div>
 
-			<div>[<a href="https://nuss.nagoya-u.ac.jp/s/5JHSbJd34YH7GXs">slides</a>>],[video]</div>
+			<div>[<a href="https://nuss.nagoya-u.ac.jp/s/5JHSbJd34YH7GXs">slides</a>],[video]</div>
 </td></tr>
 <tr><td>20:00&ndash;20:20</td>
 <td>
