--- a/registration/index.html
+++ b/registration/index.html
@@ -19,10 +19,13 @@ Details of registration will be announced later.
 </p>
 
 <p>
-  <button type="button" onclick="location.href='https://forms.office.com/r/CxL439NeH8'">Registration</button>
+  <b>Registration Closed</b>
+<!--  <button type="button" onclick="location.href='https://forms.office.com/r/CxL439NeH8'">Registration</button> -->
 </p>
 
+<!--
 <p>(In case you cannot click the button, please jump to<br/> 'https://forms.office.com/r/CxL439NeH8')</p>
+-->
 
 <p>
 By clicking the button, you will be directed to an MS-office form.   After completing registration, you will receive a message
