--- a/program/index.html
+++ b/program/index.html
@@ -59,7 +59,7 @@ title: Programme
 
 			<div class="authors">Martin Kutrib, <b>Uwe Meyer</b>, Niklas Deworetzki and Marc Schuster</div>
 
-			<div>[<a href="https://nuss.nagoya-u.ac.jp/s/oGNA2kAESjLJ6Fk" target="_blank">slides</a>],[video]</div>
+			<div>[<a href="https://nuss.nagoya-u.ac.jp/s/oGNA2kAESjLJ6Fk" target="_blank">slides</a>],[<a href="https://nuss.nagoya-u.ac.jp/s/bNzNcw8FJePAqdD" target="_blank">video</a>]</div>
 </td></tr>
 <tr><td>20:30&ndash;20:55</td>
 <td>
@@ -68,7 +68,7 @@ title: Programme
 
 			<div class="authors"><b>Lasse Hay-Schmidt</b>, Robert Glück, <b>Martin Holm Cservenka</b> and Tue Haulund</div>
 
-			<div>[slides],[video]</div>
+			<div>[slides]</div>
 </td></tr>
 <tr><td>20:55&ndash;21:25</td>
 <td>
@@ -77,7 +77,7 @@ title: Programme
 
 			<div class="authors"><b>Giovanni Fabbretti</b>, Ivan Lanese and Jean-Bernard Stefani</div>
 
-			<div>[<a href="https://nuss.nagoya-u.ac.jp/s/LJp99n3TPLKNZa2" target="_blank">slides</a>],[video]</div>
+			<div>[<a href="https://nuss.nagoya-u.ac.jp/s/LJp99n3TPLKNZa2" target="_blank">slides</a>],[<a href="https://nuss.nagoya-u.ac.jp/s/PCi9LAACL7pkysa" target="_blank">video</a>]</div>
 </td></tr>
 <tr class="special"><td>21:25&ndash;21:55</td>
 <td><div class="paper">Break</div></td></tr>
@@ -89,7 +89,7 @@ title: Programme
 
 			<div class="authors">Hernán Melgratti, <b>Claudio Antares Mezzina</b> and G. Michele Pinna</div>
 
-			<div>[<a href="https://nuss.nagoya-u.ac.jp/s/tKw5dsybcEDxkHr" target="_blank">slides</a>],[video]</div>
+			<div>[<a href="https://nuss.nagoya-u.ac.jp/s/tKw5dsybcEDxkHr" target="_blank">slides</a>],[<a href="https://nuss.nagoya-u.ac.jp/s/egezw6gSRFJNny3" target="_blank">video</a>]</div>
 </td></tr>
 <tr><td>22:25&ndash;22:55</td>
 <td>
@@ -150,7 +150,7 @@ title: Programme
 
 			<div class="authors"><b>Luca Roversi</b>, Luca Paolini and Armando Matos</div>
 
-			<div>[<a href="https://nuss.nagoya-u.ac.jp/s/iYQznBrnxmZAG5n" target="_blank">slides</a>],[video]</div>
+			<div>[<a href="https://nuss.nagoya-u.ac.jp/s/iYQznBrnxmZAG5n" target="_blank">slides</a>],[<a href="https://nuss.nagoya-u.ac.jp/s/ABqBfAw3SD3zb2k" target="_blank">video</a>]</div>
 </td></tr>
 <tr><td>20:20&ndash;20:40</td>
 <td>
@@ -171,7 +171,7 @@ title: Programme
 
 			<div class="authors"><b>Atsushi Matsuo</b></div>
 
-			<div>[slides],[video]</div>
+			<div>[video]</div>
 </td></tr>
 <tr class="special"><td>22:10&ndash;22:40</td>
 <td><div class="paper">Break</div></td></tr>
@@ -210,7 +210,7 @@ title: Programme
 
 			<div class="authors"><b>Claudio Moraga</b></div>
 
-			<div>[<a href="https://nuss.nagoya-u.ac.jp/s/HJFkMRmxTFoNfQt" target="_blank">slides</a>],[video]</div>
+			<div>[<a href="https://nuss.nagoya-u.ac.jp/s/HJFkMRmxTFoNfQt" target="_blank">slides</a>],[<a href="https://nuss.nagoya-u.ac.jp/s/5BTAkAyGsSCm7zn" target="_blank">video</a>]</div>
 </td></tr>
 <tr class="special"><td>24:30&ndash;24:45</td><td><div class="paper">Closing</div></td></tr>
 </table>
