--- a/program/index.html
+++ b/program/index.html
@@ -98,7 +98,7 @@ title: Programme
 
 			<div class="authors"><b>Ivan Lanese</b> and Iain Phillips</div>
 
-			<div>[<a href="https://nuss.nagoya-u.ac.jp/s/RRftLEwedt3Wwnm" target="_blank">slides</a>],[video]</div>
+			<div>[<a href="https://nuss.nagoya-u.ac.jp/s/RRftLEwedt3Wwnm" target="_blank">slides</a>],[<a href="https://nuss.nagoya-u.ac.jp/s/tHcZ7FdEGLrn9Y3" target="_blank">video</a>]</div>
 </td></tr>
 <tr><td>22:55&ndash;23:25</td>
 <td>
@@ -116,7 +116,7 @@ title: Programme
 
 			<div class="authors"><b>Martin Vassor</b></div>
 
-			<div>[slides],[video]</div>
+			<div>[slides],[<a href="https://nuss.nagoya-u.ac.jp/s/AfZB25mQL3dK3ES" target="_blank">video</a>]</div>
 </td></tr>
 </table>
 <h2>Day 2 &ndash; July-8 2021</h2>
@@ -129,7 +129,7 @@ title: Programme
 
 			<div class="authors"><b>Shin-ichi Minato</b></div>
 
-			<div>[<a href="https://nuss.nagoya-u.ac.jp/s/ryeLijr9zYXybpj" target="_blank">slides</a>],[video]</div>
+			<div>[<a href="https://nuss.nagoya-u.ac.jp/s/ryeLijr9zYXybpj" target="_blank">slides</a>],[<a href="https://nuss.nagoya-u.ac.jp/s/FGLMma4yxLpay4X" target="_blank">video</a>]</div>
 </td></tr>
 <tr class="special"><td>19:00&ndash;19:30</td>
 <td><div class="paper">Break</div></td></tr>
