--- a/program/index.html
+++ b/program/index.html
@@ -171,7 +171,7 @@ title: Programme
 
 			<div class="authors"><b>Atsushi Matsuo</b></div>
 
-			<div>[video]</div>
+			<div>[<a href="https://nuss.nagoya-u.ac.jp/s/mXsornHyxW9R85S" target="_blank">video</a>]</div>
 </td></tr>
 <tr class="special"><td>22:10&ndash;22:40</td>
 <td><div class="paper">Break</div></td></tr>
