--- a/program/index.html
+++ b/program/index.html
@@ -116,7 +116,7 @@ title: Programme
 
 			<div class="authors"><b>Martin Vassor</b></div>
 
-			<div>[slides],[<a href="https://nuss.nagoya-u.ac.jp/s/AfZB25mQL3dK3ES" target="_blank">video</a>]</div>
+			<div>[<a href="https://nuss.nagoya-u.ac.jp/s/rc8668GB3eRkWdy" target="_blank">slides</a>],[<a href="https://nuss.nagoya-u.ac.jp/s/AfZB25mQL3dK3ES" target="_blank">video</a>]</div>
 </td></tr>
 </table>
 <h2>Day 2 &ndash; July-8 2021</h2>
