--- a/program/index.html
+++ b/program/index.html
@@ -192,7 +192,7 @@ title: Programme
 
 			<div class="authors"><b>Philipp Niemann</b>, Luca Müller and Rolf Drechsler</div>
 
-			<div>[slides],[video]</div>
+			<div>[<a href="https://nuss.nagoya-u.ac.jp/s/8HTYWX7AFf9kBTH" target="_blank">slides</a>],[<a href="https://nuss.nagoya-u.ac.jp/s/MRfxBBEx9A9iqig" target="_blank">video</a>]</div>
 </td></tr>
 <tr><td>23:40&ndash;24:10</td>
 <td>
